# gridiron

./: Cargo.toml  README.md  build.rs
euler_demo/: Cargo.toml  plot.py
euler_demo/src/: main.rs
euler_demo/src/solvers/: euler2d_pcm.rs
examples/: automaton-task.rs  euler.rs  euler_dist.rs  euler_mpi.rs  metal_demo.rs  mpi_demo.rs  mt_scaling.rs  ring.rs
examples/euler/: Cargo.toml
examples/euler/src/: lib.rs  main.rs
examples/euler/src/solvers/: euler2d_pcm.rs
src/: adjacency_list.rs  automaton.rs  coder.rs  index_space.rs  lib.rs  meshing.rs  num_vec.rs  overlap.rs  patch.rs  thread_pool.rs
src/message/: comm.rs  mod.rs  mpi.rs  null.rs  tcp.rs  tcp_v1.rs  tcp_v2.rs  tcp_v3.rs  util.rs
src/metal/: metal.m  mod.rs
src/mpi/: mod.rs  mpi.c
