[package]
name = "gridiron"
version = "0.1.0"
authors = ["Jonathan Zrake <jonathan.zrake@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = { version = "0.5", optional = true }
core_affinity     = { version = "0.5", optional = true }
mpi               = { version = "0.5", optional = true }
rayon             = { version = "1.5", optional = true }
serde             = { version = "1.0", optional = true, features = ["derive"] }
